# django-empty-project

./: .gitignore  README.md  _env   pyproject.toml
config/: settings.py  urls.py
core/: apps.py  asgi.py  models.py  settings.py
core/api/: viewsets.py
core/conf/: common.py  db.py  installed_apps.py  logging.py  media.py  middleware.py  rest.py  rq.py  sentry.py  templates.py
core/templates/: main.html
core/urls/: __init__.py
