[tool.poetry]
name = "selfbill"
version = "0.1.0"
description = "Empty project"
authors = ["mamashin <mamashin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
loguru = "^0.5.3"
python-decouple = "^3.5"
djangorestframework = "^3.13.1"
httpx = "^0.21.3"
sentry-sdk = "^1.5.2"
redis = "^4.1.0"
rq = "^1.10.1"
django-rq = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
